fix nav-bar text alignment

--- a/server/client/css/index.css
+++ b/server/client/css/index.css
@@ -61,7 +61,7 @@ body {
     clear: both;
     max-height: 0;
     transition: max-height 0.2s ease-out;
-    text-align: right;
+    text-align: center;
 }
 
 #nav-bar ul {
